added copy right footer

--- a/views/index.pug
+++ b/views/index.pug
@@ -31,7 +31,7 @@ html
             
             footer.fixed-bottom.container
                 hr
-                p Copyright &copy; 2021
+                p Copyright &copy; 2021 | VAtSea
 //-   script(src="/bower_components/jquery/dist/jquery.js")
 //-   script(src="/bower_components/bootstrap/dist/js/bootstrap.js")
 //-   script(src="/js/main.js")
